--- a/oficialesApp/src/main/resources/application.properties
+++ b/oficialesApp/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/oficialapp?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 #Desconectar para no hacer updates todo el rato
 spring.jpa.hibernate.ddl-auto=update
 
@@ -29,4 +29,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.security.user.name =aaa
 spring.security.user.password=aaa
 #logging.level.org.springframework.web.servlet.handler.HandlerMappingIntrospector=ERROR
-
+logging.level.org.springframework.security= trace
