--- a/oficialesApp/src/main/resources/application.properties
+++ b/oficialesApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8082
 #
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/oficialapp?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/oficialapp?allowPublicKeyRetrieval=true&useSSL=false
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/XConnection?useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost/cursojava?useSSL=false
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/oficialapp?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 #Desconectar para no hacer updates todo el rato
 spring.jpa.hibernate.ddl-auto=update
 
